# rom-patcher

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
src/: main.c  util.h
src/patchers/: bps.c  bps.h  error.h  ips.c  ips.h
test/patchers/: ips.c
